Updated Setting up a Schedoscope Project (markdown)